Update README and fix mobile layout bug

--- a/src/components/Projects/styles/Project.css
+++ b/src/components/Projects/styles/Project.css
@@ -51,6 +51,7 @@
 }
 
 .image-link {
+  z-index: 2;
   display: block;
   width: 35px;
   filter: var(--filter);
