--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -2,7 +2,7 @@ header {
   position: sticky;
   top: 0;
   background-color: var(--primary-color);
-  z-index: 2;
+  z-index: 3;
 }
 
 .section-hero {
